--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "agency",
-  "title": "Agency",
-  "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/agency",
-  "author": "Start Bootstrap",
+  "name": "gruposir",
+  "title": "Grupo SIR",
+  "version": "1.0.0",
+  "homepage": "http://gruposir.net",
+  "author": "Xavi Ivars",
   "license": {
     "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
+    "url": "https://github.com/xavivars/startbootstrap-agency/blob/gruposirnet/LICENSE"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
@@ -23,6 +23,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+    "url": "https://github.com/xavivars/startbootstrap-agency.git"
   }
 }
